FIX: Improve spacing of subexamples

--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -32,6 +32,7 @@
   .ex, .example {
 
     counter-increment  : examples;
+    counter-reset      : subexamples;
     display            : list-item;
     margin-block       : var(--example-margin);
     margin-inline-start: var(--example-indent);
@@ -49,14 +50,19 @@
   .subexs, .subexamples {
 
     display            : inline-block;
-    margin-inline-start: var(--example-indent);
+    list-style-type    : none;
+    margin-inline-start: 1.5em;
     padding            : 0em;
-    list-style-position: outside;
-    list-style-type    : lower-alpha;
-    vertical-align     : top;
 
     li {
-      display: list-item;
+      counter-increment: subexamples;
+      display          : list-item;
+    }
+
+    li::before {
+      content            : counter(subexamples, lower-alpha) '.';
+      margin-inline-start: -1.5em;
+      position           : absolute;
     }
 
   }
